2022-11-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl: Throw warning if paper format is
	unrecognized.

2022-11-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl (Msg): Align more closely with
	diagnostic message format prescribed by GNU Coding Standards:
	emit space (only) prior to message severity.

2022-11-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/meref.me.in: Drop unnecessary initialization parameters
	from document.  The line and title length do not need to be set
	in troff mode; the document lays out fine for a variety of paper
	formats if these are not forced to 6.5 inches.  Also drop
	redundant initialization of `pp` register.

2022-11-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Fix Savannah #63377.

	* tmac/doc.tmac (Nm): Properly leverage new
	`doc-in-name-section` variable.  Set page topic `doc-topic-name`
	to the first encountered argumentful `Nm` call in the "Name"
	section while handling other "Name" section concerns, instead of
	later after deciding we're not in the "Synopsis" section.
	Problem caused by me when fixing antediluvian mdoc bug in commit
	0d85615c62, 5 November.

	Fixes <https://savannah.gnu.org/bugs/?63377>.  Thanks to John
	Gardner for the report.

2022-11-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Add tests for `Nm` macro.

	* tmac/tests/doc_Nm-works.sh: Do it.  Test regression reported
	in Savannah #63377.  Also ensure that we handle the case where
	multiple `Nm` items are declared in the "Name" section (as might
	happen in library man pages).
	* tmac/tmac.am (tmac_TESTS): Run test.

2022-11-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/papersize.tmac: Improve integration with mm(7) macro
	package.  If a paper format has been selected, set `W` register
	to new line length (if not already set on command line).
	Similarly, set `O` register to 1 inch for the symmetric