@@ -147,9 +147,11 @@ EXTRA_DIST += \
 tmac_TESTS = \
   tmac/tests/an-ext_ME-punct-hyphenates.sh \
   tmac/tests/an-ext_MT-body-hyphenates.sh \
+  tmac/tests/an-ext_MT-works.sh \
   tmac/tests/an-ext_UE-breaks-before-long-URIs.sh \
   tmac/tests/an-ext_UE-punct-hyphenates.sh \
   tmac/tests/an-ext_UR-body-hyphenates.sh \
+  tmac/tests/an-ext_UR-works.sh \
   tmac/tests/an-ext_link-macros-work-in-paragraph-tags.sh \
   tmac/tests/an_AT-and-UC-footer-saved-and-restored.sh \
   tmac/tests/an_CS-register-off.sh \
